			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04k: *********************************

IMP: (5/4/06, DN) PixelDrawing takes shapes from VectorCache for faster redisplay. 

BUG: (5/4/06, DN) Wrong names of SelectObjects/SelectArea buttons.
FIX: Swap them in ToolBar.java.

BUG: (5/3/06, SMR) Auto Stitcher crashes wiring a node to an arc (Bug #958)
FIX: In AutoStitch.compRoutes.compare(), handle sorting arc wirings.

IMP/MAN: (5/3/06, GVG) [Bug 961] Ability to refresh simulation data with KeyBinding.

BUG: (5/3/06, GVG) "Easy selection of cell instances" off makes impossible to select primitive nodes with MouseOverHighlighter.
FIX:  if (!findSpecial && !User.isEasySelectionOfCellInstances()) condition applied only if cell instance is found, not
longer in phase 0

BUG: (5/3/06, GVG) "package into cell" throws exception (Bug #960)
FIX: We can't use Rectangle2D.Double as field in Job. They can't be serializable. Changed to EPoint+double

BUG: (5/2/06, GVG) Quarter motion button missing in toolbar (Bug #957)
FIX: Added into ToolBar.java. Left off in v8.04j.

IMP/MAN (5/2/06, JKG) Added CVS Page in HTML Manual

BUG: (5/2/06, GVG) Strange clean up of goodDRCdates in Quick.java (no Bugzilla)
FIX: Not cleaning the Data list if only errors.

IMP: (5/2/06, DN) Vector cache is moved from VectorDrawing to a new class as a preparation of
    further redisplay changes.

BUG: (5/2/06, DN) No marking library in bold after cleaning up NCC annotations (Bug #941)
FIX: Move clean up of NCC annotations to CheckAndRepairJob.

BUG: (5/1/06, GVG) Waveform viewer Measurement mode Can't zoom, fit window (Bug #934)
FIX: Initialization problem related to measurements

BUG: (5/1/06, GVG) Print info for selected node doesn't work (Bug #944)
FIX: More problems found. In LENetlister2.printResults(). comparing NodeInst now.
