@@ -358,34 +358,16 @@ public class SpecialProperties
 				Variable oldWid = ni.getVar(Schematics.ATTR_WIDTH);
                 TextDescriptor wtd = oldWid != null ? oldWid.getTextDescriptor() : TextDescriptor.getNodeTextDescriptor();
 				ni.newVar(Schematics.ATTR_WIDTH, newValue, wtd.withCode(newCode));
-//				Variable var = ni.newDisplayVar(Schematics.ATTR_WIDTH, newValue);
-//				if (var != null)
-//				{
-//					if (oldWid != null) var.setTextDescriptor(oldWid.getTextDescriptor());
-//					var.setCode(newCode);
-//				}
 
 				Variable oldLen = ni.getVar(Schematics.ATTR_LENGTH);
                 TextDescriptor ltd = oldLen != null ? oldLen.getTextDescriptor() : TextDescriptor.getNodeTextDescriptor();
 				ni.newVar(Schematics.ATTR_LENGTH, newValueLen, ltd.withCode(newCodeLen));
-//				var = ni.newDisplayVar(Schematics.ATTR_LENGTH, newValueLen);
-//				if (var != null)
-//				{
-//					if (oldLen != null) var.setTextDescriptor(oldLen.getTextDescriptor());
-//					var.setCode(newCodeLen);
-//				}
 			} else
 			{
 				// update single value on a node
 				Variable oldVar = ni.getVar(key);
                 TextDescriptor td = oldVar != null ? oldVar.getTextDescriptor() : TextDescriptor.getNodeTextDescriptor();
 				ni.newVar(key, newValue, td);
-//				Variable var = ni.newDisplayVar(key, newValue);
-//				if (var != null)
-//				{
-//					if (oldVar != null) var.setTextDescriptor(oldVar.getTextDescriptor());
-//				}
-//
 				// set techbits if requested
 				if (newBits != -1)
 					ni.setTechSpecific(newBits);
